[tool.poetry]
name = "eurus"
version = "0.1.0"
description = ""
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = "^0.23.1"}
sortedcontainers = "^2.4.0"
asyncio-mqtt = "^0.12.1"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]
autohooks = ">=22.8.1"
autohooks-plugin-isort = ">=22.8.0"
autohooks-plugin-pylint = ">=22.8.1"
autohooks-plugin-black = ">=22.8.1"
pontos = ">=22.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eurus-scan = "eurus.main:main"

[tool.black]
line-length = 80
target-version = ["py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.black',
  'autohooks.plugins.isort',
  'autohooks.plugins.pylint',
]

[tool.pontos.version]
version-module-file = "eurus/__version__.py"
