[tool.poetry]
name = "eurus"
version = "0.1.0"
description = "A vulnerability scanner for container images"
authors = ["Björn Ricks <bjoern.ricks@greenbone.net>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/bjoernricks/eurus/"

classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Affero Public License v3 or later (AGPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = { extras = ["http2"], version = ">=0.23.1" }
sortedcontainers = ">=2.4.0"
rich = ">=13.0.0"
aiomqtt = ">=1.2.1"

[tool.poetry.dev-dependencies]
autohooks = ">=22.8.1"
autohooks-plugin-ruff = ">=23.11.0"
autohooks-plugin-black = ">=22.8.1"
autohooks-plugin-mypy = ">=23.10.0"
pontos = ">=22.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eurus-scan = "eurus.main:main"

[tool.black]
line-length = 80
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 80

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.black',
  'autohooks.plugins.ruff',
  'autohooks.plugins.mypy',
]

[tool.ruff]
line-length = 80
target-version = "py311"
extend-select = ["I", "PLE", "PLW"]

[tool.mypy]
files = "eurus"
ignore_missing_imports = true
explicit_package_bases = true
allow_redefinition = true

[tool.pontos.version]
version-module-file = "eurus/__version__.py"
